--- a/colleagues.html
+++ b/colleagues.html
@@ -276,22 +276,22 @@
                     </div>
                     <div class="colleague-details">
                         <h2>Antony Innocent Anatoli</h2>
-                        <h3>Lecturer, Department of Community Health</h3>
+                        <h3>Academician, Department of Community Health</h3>
                         <h4>Muhimbili University of Health and Allied Sciences (MUHAS)</h4>
-                        <p class="preview-text">Antony Innocent Anatoli is a distinguished academician and expert in nutritional epidemiology, clinical nutrition, maternal and child nutrition, and public health. His research focuses on behavioral nutrition, rehabilitation, and program implementation...</p>
+                        <p class="preview-text">Antony Innocent Anatoli is an accomplished academician specializing in nutritional epidemiology, maternal and child nutrition, therapeutic nutrition, and public health. His work focuses on research, program design, and innovative approaches to improving nutrition and health outcomes...</p>
                         <div class="colleague-social">
-                            <a href="https://scholar.google.com/citations?user=lhdfoCcAAAAJ&hl=en" target="_blank" rel="noopener noreferrer"><i class="fas fa-graduation-cap"></i> Google Scholar</a>
+                            <a href="https://scholar.google.com/citations?user=lhdfoCcAAAAJ&hl=en" target="_blank" rel="noopener noreferrer"><i class="fab fa-google"></i> Google Scholar</a>
                             <a href="https://www.researchgate.net/profile/Antony-Anatoli" target="_blank" rel="noopener noreferrer"><i class="fab fa-researchgate"></i> ResearchGate</a>
-                            <a href="https://orcid.org/0009-0004-1648-481X" target="_blank" rel="noopener noreferrer"><i class="fab fa-orcid"></i> ORCID</a>
+                            <a href="https://orcid.org/0009-0004-1648-481X" target="_blank" rel="noopener noreferrer"><i class="fas fa-id-card"></i> ORCID</a>
                         </div>
                         <div class="share-buttons">
-                            <a href="https://wa.me/?text=Check%20out%20Antony%20Innocent%20Anatoli,%20Nutrition%20and%20Public%20Health%20expert%20at%20MUHAS%20-%20https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button whatsapp">
+                            <a href="https://wa.me/?text=Check%20out%20Antony%20Innocent%20Anatoli,%20an%20accomplished%20academician%20at%20MUHAS%20-%20https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button whatsapp">
                                 <i class="fab fa-whatsapp"></i> WhatsApp
                             </a>
-                            <a href="https://t.me/share/url?url=https://januarymsemakweli.com/colleagues&text=Check%20out%20Antony%20Innocent%20Anatoli,%20Nutrition%20and%20Public%20Health%20expert%20at%20MUHAS" target="_blank" rel="noopener noreferrer" class="share-button telegram">
+                            <a href="https://t.me/share/url?url=https://januarymsemakweli.com/colleagues&text=Check%20out%20Antony%20Innocent%20Anatoli,%20an%20accomplished%20academician%20at%20MUHAS" target="_blank" rel="noopener noreferrer" class="share-button telegram">
                                 <i class="fab fa-telegram"></i> Telegram
                             </a>
-                            <a href="https://twitter.com/intent/tweet?text=Check%20out%20Antony%20Innocent%20Anatoli,%20Nutrition%20and%20Public%20Health%20expert%20at%20MUHAS&url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button twitter">
+                            <a href="https://twitter.com/intent/tweet?text=Check%20out%20Antony%20Innocent%20Anatoli,%20an%20accomplished%20academician%20at%20MUHAS&url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button twitter">
                                 <i class="fab fa-twitter"></i> Twitter
                             </a>
                             <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button linkedin">
@@ -310,28 +310,28 @@
                                 <img src="images/Anthony.jpg" alt="Antony Innocent Anatoli" class="colleague-overlay-image">
                                 <div class="colleague-title">
                                     <h2>Antony Innocent Anatoli</h2>
-                                    <h3>Lecturer, Department of Community Health</h3>
+                                    <h3>Academician, Department of Community Health</h3>
                                     <h4>Muhimbili University of Health and Allied Sciences (MUHAS)</h4>
                                 </div>
                             </div>
                             <div class="colleague-bio">
-                                <p>Antony Innocent Anatoli is a distinguished academician and practitioner in the field of community health and nutrition. He serves as a lecturer in the Department of Community Health at the Muhimbili University of Health and Allied Sciences (MUHAS) in Dar es Salaam, Tanzania. His areas of expertise include nutritional epidemiology, clinical nutrition, maternal and child nutrition, therapeutic nutrition, and public health.</p>
-                                <p>Antony’s research focuses on behavioral nutrition, rehabilitation, and the development of effective programs for addressing nutritional and public health challenges. He is also skilled in designing, implementing, monitoring, and evaluating health programs aimed at improving community well-being.</p>
-                                <p>Antony is actively involved in academic research and has contributed to several impactful studies and publications in the field of nutrition and public health. His work continues to advance knowledge and influence practice in the health sector.</p>
+                                <p>Antony Innocent Anatoli is an accomplished academician in the Department of Community Health at Muhimbili University of Health and Allied Sciences (MUHAS). Renowned for his expertise, he specializes in a wide range of critical areas, including nutritional epidemiology, nutrition assessments and surveillance, nutritional biochemistry, clinical nutrition and dietetics, maternal and child nutrition, therapeutic nutrition, food and nutrition security, and nutrition in emergencies. His professional scope also encompasses nutrition in exercise and sports, as well as public health.</p>
+                                <p>Beyond his technical acumen, Antony is highly skilled in designing, implementing, monitoring, and evaluating comprehensive programs that address complex nutritional and public health challenges. His research interests are particularly focused on nutritional epidemiology, behavioral nutrition, and rehabilitation, where he strives to uncover innovative solutions to improve population health outcomes.</p>
+                                <p>Currently, Antony is pursuing a Master of Science in Human Nutrition and Dietetics at the Nelson Mandela African Institution of Science and Technology, further enriching his capacity to contribute cutting-edge knowledge and practical applications to the field of nutrition. His unwavering commitment to advancing research, education, and policy in nutrition and public health establishes him as a leader and influencer in the discipline.</p>
                             </div>
                             <div class="colleague-social">
-                                <a href="https://scholar.google.com/citations?user=lhdfoCcAAAAJ&hl=en" target="_blank" rel="noopener noreferrer"><i class="fas fa-graduation-cap"></i> Google Scholar</a>
+                                <a href="https://scholar.google.com/citations?user=lhdfoCcAAAAJ&hl=en" target="_blank" rel="noopener noreferrer"><i class="fab fa-google"></i> Google Scholar</a>
                                 <a href="https://www.researchgate.net/profile/Antony-Anatoli" target="_blank" rel="noopener noreferrer"><i class="fab fa-researchgate"></i> ResearchGate</a>
-                                <a href="https://orcid.org/0009-0004-1648-481X" target="_blank" rel="noopener noreferrer"><i class="fab fa-orcid"></i> ORCID</a>
+                                <a href="https://orcid.org/0009-0004-1648-481X" target="_blank" rel="noopener noreferrer"><i class="fas fa-id-card"></i> ORCID</a>
                             </div>
                             <div class="share-buttons">
-                                <a href="https://wa.me/?text=Check%20out%20Antony%20Innocent%20Anatoli,%20Nutrition%20and%20Public%20Health%20expert%20at%20MUHAS%20-%20https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button whatsapp">
+                                <a href="https://wa.me/?text=Check%20out%20Antony%20Innocent%20Anatoli,%20an%20accomplished%20academician%20at%20MUHAS%20-%20https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button whatsapp">
                                     <i class="fab fa-whatsapp"></i> WhatsApp
                                 </a>
-                                <a href="https://t.me/share/url?url=https://januarymsemakweli.com/colleagues&text=Check%20out%20Antony%20Innocent%20Anatoli,%20Nutrition%20and%20Public%20Health%20expert%20at%20MUHAS" target="_blank" rel="noopener noreferrer" class="share-button telegram">
+                                <a href="https://t.me/share/url?url=https://januarymsemakweli.com/colleagues&text=Check%20out%20Antony%20Innocent%20Anatoli,%20an%20accomplished%20academician%20at%20MUHAS" target="_blank" rel="noopener noreferrer" class="share-button telegram">
                                     <i class="fab fa-telegram"></i> Telegram
                                 </a>
-                                <a href="https://twitter.com/intent/tweet?text=Check%20out%20Antony%20Innocent%20Anatoli,%20Nutrition%20and%20Public%20Health%20expert%20at%20MUHAS&url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button twitter">
+                                <a href="https://twitter.com/intent/tweet?text=Check%20out%20Antony%20Innocent%20Anatoli,%20an%20accomplished%20academician%20at%20MUHAS&url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button twitter">
                                     <i class="fab fa-twitter"></i> Twitter
                                 </a>
                                 <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button linkedin">
