--- a/colleagues.html
+++ b/colleagues.html
@@ -282,7 +282,7 @@
                         <div class="colleague-social">
                             <a href="https://scholar.google.com/citations?user=lhdfoCcAAAAJ&hl=en" target="_blank" rel="noopener noreferrer"><i class="fab fa-google"></i> Google Scholar</a>
                             <a href="https://www.researchgate.net/profile/Antony-Anatoli" target="_blank" rel="noopener noreferrer"><i class="fab fa-researchgate"></i> ResearchGate</a>
-                            <a href="https://orcid.org/0009-0004-1648-481X" target="_blank" rel="noopener noreferrer"><i class="fas fa-ORCID"></i> ORCID</a>
+                            <a href="https://orcid.org/0009-0004-1648-481X" target="_blank" rel="noopener noreferrer"><i class="fas fa-orcid"></i> ORCID</a>
                         </div>
                         <div class="share-buttons">
                             <a href="https://wa.me/?text=Check%20out%20Antony%20Innocent%20Anatoli,%20an%20accomplished%20academician%20at%20MUHAS%20-%20https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button whatsapp">
@@ -322,7 +322,7 @@
                             <div class="colleague-social">
                                 <a href="https://scholar.google.com/citations?user=lhdfoCcAAAAJ&hl=en" target="_blank" rel="noopener noreferrer"><i class="fab fa-google"></i> Google Scholar</a>
                                 <a href="https://www.researchgate.net/profile/Antony-Anatoli" target="_blank" rel="noopener noreferrer"><i class="fab fa-researchgate"></i> ResearchGate</a>
-                                <a href="https://orcid.org/0009-0004-1648-481X" target="_blank" rel="noopener noreferrer"><i class="fas fa-ORCID"></i> ORCID</a>
+                                <a href="https://orcid.org/0009-0004-1648-481X" target="_blank" rel="noopener noreferrer"><i class="fas fa-orcid"></i> ORCID</a>
                             </div>
                             <div class="share-buttons">
                                 <a href="https://wa.me/?text=Check%20out%20Antony%20Innocent%20Anatoli,%20an%20accomplished%20academician%20at%20MUHAS%20-%20https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button whatsapp">
