--- a/colleagues.html
+++ b/colleagues.html
@@ -272,6 +272,86 @@
                 </div>
                 <div class="colleague-card">
                     <div class="colleague-photo">
+                        <img src="images/Edson.jpg" alt="Edson Protas" class="colleague-image">
+                    </div>
+                    <div class="colleague-details">
+                        <h2>Edson Protas</h2>
+                        <h3>Academician, Department of Environmental and Occupational Health</h3>
+                        <h4>Muhimbili University of Health and Allied Sciences (MUHAS)</h4>
+                        <p class="preview-text">
+                            Edson Protas is a dedicated academician specializing in environmental and occupational health. 
+                            His research focuses on workplace safety, occupational disease prevention, and improving health 
+                            systems in resource-limited settings...
+                        </p>
+                        <div class="colleague-social">
+                            <a href="https://www.linkedin.com/in/edsonprotasmuhas?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-linkedin"></i> LinkedIn
+                            </a>
+                            <a href="https://www.researchgate.net/profile/Edson-Protas" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-researchgate"></i> ResearchGate
+                            </a>
+                        </div>
+                        <div class="share-buttons">
+                            <a href="https://wa.me/?text=Check%20out%20Edson%20Protas,%20an%20environmental%20and%20occupational%20health%20academic%20at%20MUHAS%20-%20https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button whatsapp">
+                                <i class="fab fa-whatsapp"></i> WhatsApp
+                            </a>
+                            <a href="https://t.me/share/url?url=https://januarymsemakweli.com/colleagues&text=Check%20out%20Edson%20Protas,%20an%20environmental%20and%20occupational%20health%20academic%20at%20MUHAS" target="_blank" rel="noopener noreferrer" class="share-button telegram">
+                                <i class="fab fa-telegram"></i> Telegram
+                            </a>
+                            <a href="https://twitter.com/intent/tweet?text=Check%20out%20Edson%20Protas,%20an%20environmental%20and%20occupational%20health%20academic%20at%20MUHAS&url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button twitter">
+                                <i class="fab fa-twitter"></i> Twitter
+                            </a>
+                            <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button linkedin">
+                                <i class="fab fa-linkedin"></i> Share
+                            </a>
+                        </div>
+                        <button class="read-more-btn">Read More</button>
+                    </div>
+                </div>
+                <!-- Colleague Details Overlay -->
+                <div class="colleague-overlay">
+                    <div class="colleague-overlay-content">
+                        <button class="close-overlay"><i class="fas fa-times"></i></button>
+                        <div class="colleague-full-details">
+                            <div class="colleague-header">
+                                <img src="images/Edson.jpg" alt="Edson Protas" class="colleague-overlay-image">
+                                <div class="colleague-title">
+                                    <h2>Edson Protas</h2>
+                                    <h3>Academician, Department of Environmental and Occupational Health</h3>
+                                    <h4>Muhimbili University of Health and Allied Sciences (MUHAS)</h4>
+                                </div>
+                            </div>
+                            <div class="colleague-bio">
+                                <p>Edson Protas is a dedicated academician in the Department of Environmental and Occupational Health at Muhimbili University of Health and Allied Sciences (MUHAS). He holds a Master of Science in Environmental and Occupational Health and has built a strong foundation in addressing key occupational health challenges. His research interests lie in occupational health, focusing on improving workplace safety, preventing occupational diseases, and enhancing health systems, particularly in resource-limited settings.</p>
+                                <p>With a passion for research and education, Edson Protas contributes significantly to advancing knowledge in his field and shaping future environmental and occupational health policies in Tanzania and beyond.</p>
+                            </div>
+                            <div class="colleague-social">
+                                <a href="https://www.linkedin.com/in/edsonprotasmuhas?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-linkedin"></i> LinkedIn
+                                </a>
+                                <a href="https://www.researchgate.net/profile/Edson-Protas" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-researchgate"></i> ResearchGate
+                                </a>
+                            </div>
+                            <div class="share-buttons">
+                                <a href="https://wa.me/?text=Check%20out%20Edson%20Protas,%20an%20environmental%20and%20occupational%20health%20academic%20at%20MUHAS%20-%20https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button whatsapp">
+                                    <i class="fab fa-whatsapp"></i> WhatsApp
+                                </a>
+                                <a href="https://t.me/share/url?url=https://januarymsemakweli.com/colleagues&text=Check%20out%20Edson%20Protas,%20an%20environmental%20and%20occupational%20health%20academic%20at%20MUHAS" target="_blank" rel="noopener noreferrer" class="share-button telegram">
+                                    <i class="fab fa-telegram"></i> Telegram
+                                </a>
+                                <a href="https://twitter.com/intent/tweet?text=Check%20out%20Edson%20Protas,%20an%20environmental%20and%20occupational%20health%20academic%20at%20MUHAS&url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button twitter">
+                                    <i class="fab fa-twitter"></i> Twitter
+                                </a>
+                                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button linkedin">
+                                    <i class="fab fa-linkedin"></i> Share
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>                
+                <div class="colleague-card">
+                    <div class="colleague-photo">
                         <img src="images/Anthony.jpg" alt="Antony Innocent Anatoli" class="colleague-image">
                     </div>
                     <div class="colleague-details">
