--- a/ai-assistant.html
+++ b/ai-assistant.html
@@ -32,7 +32,7 @@
         <nav>
             <div class="logo">
                 <a href="index.html">
-                    <img src="https://media.licdn.com/dms/image/v2/D4D03AQHHv45SnXdI8g/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1702616700424?e=1740009600&v=beta&t=TYlN87fMuMnahQkUnUT48EVjUEFJc5HxfXM8kiUlioU" alt="January G. Msemakweli" class="logo-img">
+                    <img src="images/logo.jpg" alt="January G. Msemakweli" class="logo-img">
                     <h1>Msemakweli Research</h1>
                 </a>
             </div>
