--- a/shiny-apps.html
+++ b/shiny-apps.html
@@ -77,7 +77,7 @@
                     <li><i class="fas fa-check"></i> Download results as Excel</li>
                     <li><i class="fas fa-check"></i> View model diagnostics</li>
                 </ul>
-                <a href="https://h0r737-january-msemakweli.shinyapps.io/RegressThat/" target="_blank" class="app-button">Launch App</a>
+                <a href="RegressThatv2.html" class="app-button">Launch App</a>
             </div>
 
             <div class="app-card">
