--- a/shiny-apps.html
+++ b/shiny-apps.html
@@ -62,7 +62,7 @@
                     <li><i class="fas fa-check"></i> Map columns manually</li>
                     <li><i class="fas fa-check"></i> Run Analysis</li>
                 </ul>
-                <a href="https://www.januarymsemakweli.com/mendelian-randomization.html" class="app-button">Launch App</a>
+                <a href="mendelian-randomization.html" class="app-button">Launch App</a>
             </div>
 
             <div class="app-card">
