--- a/RegressThatv2.html
+++ b/RegressThatv2.html
@@ -15,7 +15,7 @@
             background-color: #5d6d75;
         }
     </style>
-    <title>TwoSampleMR - January G. Msemakweli</title>
+    <title>RegressThat v2 - January G. Msemakweli</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="icon" type="image/x-icon" href="https://january-msemakweli.github.io/msemakweli/favicon.png">
     <link rel="icon" type="image/x-icon" href="https://january-msemakweli.github.io/msemakweli/favicon.ico">
