--- a/notes.html
+++ b/notes.html
@@ -1,25 +1,36 @@
-<div class="notes-container">
-    <h1 class="title">Study Modules</h1>
-    <div class="notes-grid">
-        <div class="note-card">
-            <h2>Water Quality and Supply</h2>
-            <p>Learn about water sources, purification, and distribution.</p>
-            <a href="water-quality.html" class="download-btn">Survey Notes</a>
-        </div>
-        <div class="note-card">
-            <h2>Epidemiology and Biostatistics</h2>
-            <p>Explore disease patterns and statistical analysis methods.</p>
-            <a href="epidemiology.html" class="download-btn">Survey Notes</a>
-        </div>
-        <div class="note-card">
-            <h2>Disaster Management and Bioterrorism</h2>
-            <p>Understand disaster preparedness, response, and resilience.</p>
-            <a href="disaster-management.html" class="download-btn">Survey Notes</a>
-        </div>
-        <div class="note-card">
-            <h2>Research Methods</h2>
-            <p>Dive into methodologies and techniques for effective research.</p>
-            <a href="research-methods.html" class="download-btn">Survey Notes</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Study Modules</title>
+    <link rel="stylesheet" href="notes.css">
+</head>
+<body>
+    <div class="notes-container">
+        <h1 class="title">Study Modules</h1>
+        <div class="notes-grid">
+            <div class="note-card">
+                <h2>Water Quality and Supply</h2>
+                <p>Learn about water sources, purification, and distribution.</p>
+                <a href="water-quality.html" class="download-btn">Survey Notes</a>
+            </div>
+            <div class="note-card">
+                <h2>Epidemiology and Biostatistics</h2>
+                <p>Explore disease patterns and statistical analysis methods.</p>
+                <a href="epidemiology.html" class="download-btn">Survey Notes</a>
+            </div>
+            <div class="note-card">
+                <h2>Disaster Management and Bioterrorism</h2>
+                <p>Understand disaster preparedness, response, and resilience.</p>
+                <a href="disaster-management.html" class="download-btn">Survey Notes</a>
+            </div>
+            <div class="note-card">
+                <h2>Research Methods</h2>
+                <p>Dive into methodologies and techniques for effective research.</p>
+                <a href="research-methods.html" class="download-btn">Survey Notes</a>
+            </div>
         </div>
     </div>
-</div>
+</body>
+</html>
