--- a/notes.html
+++ b/notes.html
@@ -2,6 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="983EVFyArk2AX9TUkYcR1HuD_x-q2RYztpzX7K-9vJo" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#2e86df">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="msapplication-TileColor" content="#2e86df">
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            background-color: #5d6d75;
+        }
+    </style>
+    <title>January G. Msemakweli - Data Analyst</title>
+    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="https://january-msemakweli.github.io/msemakweli/favicon.png">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="https://january-msemakweli.github.io/msemakweli/favicon.ico">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+</head>
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Study Modules</title>
     <link rel="stylesheet" href="notes.css">
