--- a/notes.html
+++ b/notes.html
@@ -15,7 +15,7 @@
             background-color: #5d6d75;
         }
     </style>
-    <title>January G. Msemakweli - Data Analyst</title>
+    <title>Notes - School of Hygiene</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="icon" type="image/x-icon" href="https://january-msemakweli.github.io/msemakweli/favicon.png">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -23,8 +23,6 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-</head>
-<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Study Modules</title>
