--- a/notes.html
+++ b/notes.html
@@ -28,7 +28,27 @@
     <title>Study Modules</title>
     <link rel="stylesheet" href="notes.css">
 </head>
-<body>
+<body><body>
+    <header>
+        <nav>
+            <div class="logo">
+                <a href="index.html">
+                    <img src="images/logo.jpg" alt="January G. Msemakweli" class="logo-img">
+                    <h1>Msemakweli Research</h1>
+                </a>
+            </div>
+            <div class="nav-links" id="navLinks">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="ai-assistant.html">Gloria AI</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="shiny-apps.html">R/Shiny Apps</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <div class="notes-container">
         <h1 class="title">Study Modules</h1>
         <div class="notes-grid">
