--- a/notes.html
+++ b/notes.html
@@ -2,49 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="google-site-verification" content="983EVFyArk2AX9TUkYcR1HuD_x-q2RYztpzX7K-9vJo" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#2e86df">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="msapplication-TileColor" content="#2e86df">
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            background-color: #5d6d75;
-        }
-    </style>
-    <title>Notes - School of Hygiene</title>
-    <link rel="icon" href="favicon.png" type="image/x-icon">
-    <link rel="icon" type="image/x-icon" href="https://january-msemakweli.github.io/msemakweli/favicon.png">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" type="image/x-icon" href="https://january-msemakweli.github.io/msemakweli/favicon.ico">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <title>Study Modules</title>
+    <link rel="stylesheet" href="notes.css">
 </head>
-<body><body>
-    <header>
-        <nav>
-            <div class="logo">
-                <a href="index.html">
-                    <img src="images/logo.jpg" alt="January G. Msemakweli" class="logo-img">
-                    <h1>Msemakweli Research</h1>
-                </a>
-            </div>
-            <div class="nav-links" id="navLinks">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="ai-assistant.html">Gloria AI</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="shiny-apps.html">R/Shiny Apps</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+<body>
     <div class="notes-container">
         <h1 class="title">Study Modules</h1>
         <div class="notes-grid">
