--- a/notes-soh.html
+++ b/notes-soh.html
@@ -49,7 +49,7 @@
         </div>
         <iframe src="https://januarymsemakweli.com/notes" 
                 width="100%" 
-                height="800" 
+                height="100%" 
                 frameborder="0" 
                 style="border: none;">
         </iframe>
