--- a/notes.html
+++ b/notes.html
@@ -34,3 +34,18 @@
     </div>
 </body>
 </html>
+
+<script>
+  // Function to send the height of the content to the parent window
+  function sendHeightToParent() {
+    const height = document.body.scrollHeight; // Get the full height of the content
+    window.parent.postMessage({ iframeHeight: height }, "*");
+  }
+
+  // Send the height when the page loads
+  window.addEventListener("load", sendHeightToParent);
+
+  // Optional: Resend the height when the window resizes
+  window.addEventListener("resize", sendHeightToParent);
+</script>
+
