--- a/water-quality.html
+++ b/water-quality.html
@@ -14,8 +14,8 @@
                 <div class="ppt-icon">
                     <img src="icons/ppt-icon.png" alt="PPT Icon" class="icon">
                 </div>
-                <h2>Introduction to Water Quality</h2>
-                <a href="notes/water-introduction.ppt" download class="download-btn">Download</a>
+                <h2>Lecture 1 - Water Quality and Supply</h2>
+                <a href="notes/Lecture 1 - Water Quality and Supply.ppt" download class="download-btn">Download</a>
             </div>
             <div class="note-card">
                 <div class="ppt-icon">
