--- a/water-quality.html
+++ b/water-quality.html
@@ -15,7 +15,7 @@
                     <img src="icons/ppt-icon.png" alt="PPT Icon" class="icon">
                 </div>
                 <h2>Lecture 1 - Water Quality and Supply</h2>
-                <a href="notes/Lecture 1 - Water Quality and Supply.ppt" download class="download-btn">Download</a>
+                <a href="https://docs.google.com/presentation/d/1m3mKDkYhmlv52V64mutceDwB3NvLPC3h/export/pptx" download class="download-btn">Download</a>
             </div>
             <div class="note-card">
                 <div class="ppt-icon">
