--- a/water-quality.html
+++ b/water-quality.html
@@ -21,9 +21,16 @@
                 <div class="ppt-icon">
                     <img src="icons/ppt-icon.png" alt="PPT Icon" class="icon">
                 </div>
-                <h2>Purification Methods</h2>
-                <a href="notes/purification-methods.ppt" download class="download-btn">Download</a>
+                <h2>Lecture 2 - Criteria for Satisfactory Water</h2>
+                <a href="https://docs.google.com/presentation/d/1FFt59NPThwFSF3OTS4NwBYRyjmOBiEig/export/pptx" download class="download-btn">Download</a>
             </div>
+            <div class="note-card">
+                <div class="ppt-icon">
+                    <img src="icons/ppt-icon.png" alt="PPT Icon" class="icon">
+                </div>
+                <h2>Lecture 2 - Tomorrow</h2>
+                <a href="0" download class="download-btn">Download</a>
+            </div>            
         </div>
     </div>
 </body>
