--- a/water-notes.html
+++ b/water-notes.html
@@ -67,7 +67,30 @@
     </section>
 
     <footer>
-        <!-- Same footer as index.html -->
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>January G. Msemakweli</h3>
+                <p>Transforming African data into insights</p>
+            </div>
+            <div class="footer-section">
+                <h3>Contact Info</h3>
+                <p><i class="fas fa-phone"></i> +255 766 286 223</p>
+                <p><i class="fas fa-envelope"></i> msemakwelijanuary@gmail.com</p>
+                <p><i class="fas fa-location-dot"></i> Dar es Salaam, Tanzania</p>
+            </div>
+            <div class="footer-section">
+                <h3>Connect</h3>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/january-msemakweli/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://orcid.org/0009-0007-6743-8479" target="_blank"><i class="fab fa-orcid"></i></a>
+                    <a href="https://github.com/january-msemakweli" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://scholar.google.com/citations?user=8SiYFvMAAAAJ&hl=en" target="_blank"><i class="fab fa-google"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 January G. Msemakweli. All rights reserved.</p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
