--- a/water-notes-iframe.html
+++ b/water-notes-iframe.html
@@ -15,7 +15,7 @@
             background-color: #5d6d75;
         }
     </style>
-    <title>Notes -SoH</title>
+    <title>Water Quality and Supply Notes -SoH</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="icon" type="image/x-icon" href="https://january-msemakweli.github.io/msemakweli/favicon.png">
     <link rel="icon" type="image/x-icon" href="https://january-msemakweli.github.io/msemakweli/favicon.ico">
