--- a/water-quality.html
+++ b/water-quality.html
@@ -12,21 +12,21 @@
         <div class="notes-grid">
             <div class="note-card">
                 <div class="ppt-icon">
-                    <img src="icons/powerpoint.png" alt="PPT Icon" class="icon">
+                    <img src="icons/ppt-icon.png" alt="PPT Icon" class="icon">
                 </div>
                 <h2>Lecture 1 - Water Quality and Supply</h2>
                 <a href="https://docs.google.com/presentation/d/1m3mKDkYhmlv52V64mutceDwB3NvLPC3h/export/pptx" download class="download-btn">Download</a>
             </div>
             <div class="note-card">
                 <div class="ppt-icon">
-                    <img src="icons/powerpoint.png" alt="PPT Icon" class="icon">
+                    <img src="icons/ppt-icon.png" alt="PPT Icon" class="icon">
                 </div>
                 <h2>Lecture 2 - Criteria for Satisfactory Water</h2>
                 <a href="https://docs.google.com/presentation/d/1FFt59NPThwFSF3OTS4NwBYRyjmOBiEig/export/pptx" download class="download-btn">Download</a>
             </div>
             <div class="note-card">
                 <div class="ppt-icon">
-                    <img src="icons/powerpoint.png" alt="PPT Icon" class="icon">
+                    <img src="icons/ppt-icon.png" alt="PPT Icon" class="icon">
                 </div>
                 <h2>Lecture 2 - Tomorrow</h2>
                 <a href="0" download class="download-btn">Download</a>
