--- a/SoH-Notes.html
+++ b/SoH-Notes.html
@@ -44,13 +44,11 @@
             </div>
         </nav>
     </header>
-    <main>
+    <section>
         <section class="about-hero">
             <h1>School of Hygiene</h1>
             <p>A section for lecture notes</p>
         </section>
-    <main>
-    <section class="shiny-apps">
         <iframe 
           id="myIframe" 
           src="https://januarymsemakweli.com/notes" 
