--- a/notes.html
+++ b/notes.html
@@ -13,22 +13,22 @@
             <div class="note-card">
                 <h2>Water Quality and Supply</h2>
                 <p>Learn about water sources, purification, and distribution.</p>
-                <a href="water-quality.html" class="download-btn">Survey Notes</a>
+                <a href="water-quality.html" class="download-btn">Explore Notes</a>
             </div>
             <div class="note-card">
                 <h2>Epidemiology and Biostatistics</h2>
                 <p>Explore disease patterns and statistical analysis methods.</p>
-                <a href="epidemiology.html" class="download-btn">Survey Notes</a>
+                <a href="epidemiology.html" class="download-btn">Explore Notes</a>
             </div>
             <div class="note-card">
                 <h2>Disaster Management and Bioterrorism</h2>
                 <p>Understand disaster preparedness, response, and resilience.</p>
-                <a href="disaster-management.html" class="download-btn">Survey Notes</a>
+                <a href="disaster-management.html" class="download-btn">Explore Notes</a>
             </div>
             <div class="note-card">
                 <h2>Research Methods</h2>
                 <p>Dive into methodologies and techniques for effective research.</p>
-                <a href="research-methods.html" class="download-btn">Survey Notes</a>
+                <a href="research-methods.html" class="download-btn">Explore Notes</a>
             </div>
         </div>
     </div>
