--- a/water-quality.html
+++ b/water-quality.html
@@ -28,7 +28,28 @@
                 <div class="ppt-icon">
                     <img src="icons/ppt-icon.png" alt="PPT Icon" class="icon">
                 </div>
-                <h2>Lecture 3 - Tomorrow</h2>
+                <h2>Lecture 3</h2>
+                <a href="0" download class="download-btn">Download</a>
+            </div>            
+            <div class="note-card">
+                <div class="ppt-icon">
+                    <img src="icons/ppt-icon.png" alt="PPT Icon" class="icon">
+                </div>
+                <h2>Lecture 4</h2>
+                <a href="0" download class="download-btn">Download</a>
+            </div>      
+            <div class="note-card">
+                <div class="ppt-icon">
+                    <img src="icons/ppt-icon.png" alt="PPT Icon" class="icon">
+                </div>
+                <h2>Lecture 5</h2>
+                <a href="0" download class="download-btn">Download</a>
+            </div>       
+            <div class="note-card">
+                <div class="ppt-icon">
+                    <img src="icons/ppt-icon.png" alt="PPT Icon" class="icon">
+                </div>
+                <h2>Lecture 6</h2>
                 <a href="0" download class="download-btn">Download</a>
             </div>            
         </div>
